--- a/README.org
+++ b/README.org
@@ -40,6 +40,10 @@ its content.
 
 ** Octubre 2022
 
+*** 02-Oct-22
++ [[https://www.isa-afp.org/entries/Undirected_Graph_Theory.html][Undirected graph theory (in Isabelle/HOL)]]. ~ Chelsea Edmonds. #ITP #IsabelleHOL #Math
++ [[https://www.ccs.neu.edu/home/pete/pub/fmcad-2022.pdf][Enumerative data types with constraints]]. ~ Andrew T. Walter, David Greve, Panagiotis Manolios. #ITP #ACL2
+
 *** 01-Oct-22
 + [[https://www.isa-afp.org/entries/Maximum_Segment_Sum.html][Maximum segment sum (in Isabelle/HOL)]]. ~ Nils Cremer, Tobias Nipkow. #ITP #IsabelleHOL #Algorithms
 + [[https://books.google.es/books?id=wvuLEAAAQBAJ&lpg=PR5&ots=GZTivlm9jS&dq=%22logic%20Programming%22%20OR%20%22functional%20programming%22&lr&hl=es&pg=PP][Exploring formalisation: A primer in human-readable mathematics in Lean 3 with examples from simplicial topology]]. ~ Clara Löh.1#v=onepage&q&f=false #ITP #LeanProver #Math
