--- a/README.org
+++ b/README.org
@@ -40,6 +40,17 @@ its content.
 
 ** Octubre 2022
 
+*** 12-Oct-22
++ [[https://arxiv.org/abs/2210.05342][Formalizing May's Theorem]]. ~ Kwing Hei Li. #ITP #Coq #Math
++ [[https://arxiv.org/abs/2210.05225][A formalisation of a Fast Fourier Transform]]. ~ Laurent Théry. #ITP #Coq #Math
++ [[https://leanprover-community.github.io/blog/posts/month-in-mathlib-sep-2022/][This month in mathlib (Sep 2022)]]. #ITP #LeanProver #MathLib #Math
++ [[https://iwilare.com/msc-thesis.pdf][Counterpart semantics for quantified temporal logics: Sets, categories and Agda]]. ~ Andrea Laretto. #ITP #Agda #Logic #Math
++ [[https://www.researchgate.net/publication/364144547_A_Formalisation_of_the_Balog-Szemeredi-Gowers_Theorem_in_IsabelleHOL][A formalisation of the Balog-Szemerédi-Gowers theorem in Isabelle/HOL]]. ~ Angeliki Koutsoukou-Argyraki, Mantas Bakšys, Chelsea Edmonds. #ITP #IsabelleHOL #Math
++ [[https://mohittkr.github.io/SC_workshop_paper.pdf][Towards verified rounding-error analysis for stationary iterative methods]]. ~ Ariel Kellison et als. #ITP #Coq #Math
++ [[https://www.cs.princeton.edu/~appel/papers/arrays-with-concatenation.pdf][A solver for arrays with concatenation]]. ~ Qinshi Wang, Andrew W. Appel. #ITP #Coq
++ [[https://lawrencecpaulson.github.io/2022/10/12/verifying-distributed-systems-isabelle.html][Verifying distributed systems with Isabelle/HOL]]. ~ Martin Kleppmann. #ITP #IsabelleHOL
++ [[https://github.com/CMU-HoTT/scott][Selected Papers of Dana S]]. Scott. ~ Steve Awodey. #CompSci
+
 *** 11-Oct-22
 + [[https://serokell.io/blog/haskell-in-production-caribou][Haskell in production: Caribou]]. #Haskell #FunctionalProgramming
 + [[https://monadic.systems/post7][Haskell Server Pages With Okapi]]. #Haskell #FunctionalProgramming
