--- a/README.org
+++ b/README.org
@@ -40,6 +40,11 @@ its content.
 
 ** Octubre 2022
 
+*** 14-Oct-22
++ [[https://leanprover-community.github.io/flt-regular/index.html][Fermat’s Last Theorem for regular primes]]. ~ Riccardo Brasca (@RiccardoBrasca) et als. #ITP #LeanProver #Math
++ [[https://leanprover-community.github.io/blog/posts/month-in-mathlib-sep-2022/][This month in mathlib (Sep 2022)]]. #ITP #LeanProver #MathLib
++ [[https://www.tweag.io/blog/2022-10-14-ltl-attacks/][Testing stateful systems, part two: Linear Temporal Logic]]. ~ Carl Hammann. #Haskell #FunctionalProgramming
+
 *** 13-Oct-22
 + [[https://books.google.es/books?id=R5h-EAAAQBAJ&lpg=PP1&dq=Mathematical%20Logic%20through%20Python&hl=es&pg=PP][Mathematical Logic through Python]]. ~ Yannai A. Gonczarowski, Noam Nisan.1#v=onepage&q&f=false #Logic #Math #Python
 + [[https://static.miraheze.org/isacwiki/2/2f/Paper-Isabelle-WS22.pdf][Towards accessible formal mathematics with ISAC and Isabelle/VSCode]]. ~ Walther Neuper, Bernhard Stöger, Makarius Wenze. #ITP IsabelleHOL
