--- a/README.org
+++ b/README.org
@@ -40,6 +40,10 @@ its content.
 
 ** Octubre 2022
 
+*** 21-Oct-22
++ [[https://arxiv.org/abs/2006.01613][Classical set theory: Theory of sets and classes]]. ~ Taras Banakh. #Ebook #Logic #Math #SetTheory
++ [[https://youtube.com/playlist?list=PLyrlk8Xaylp4zxdY-QEh_g6CHlhkAsBya][Haskell Symposium 2022 recorded talks]]. #Haskell #FunctionalProgramming
+
 *** 20-Oct-22
 + [[https://cs.famaf.unc.edu.ar/~pedro/forcing/independence_ch_isabelle.pdf][The formal verification of the ctm approach to forcing]]. ~ Emmanuel Gunther, Miguel Pagano, Pedro Sánchez Terraf, Matías Steinberg. #ITP #IsabelleZF #Logic #Math #SetTheory
 + [[http://cl-informatik.uibk.ac.at/teaching/ss22/itpIsa/slides/01x1.pdf][Interactive Theorem Proving using Isabelle/HOL (Session 1)]]. ~ René Thiemann. #ITP #IsabelleHOL
